--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,9 +1,15 @@
 .main-text {
-    width: 40%;
+    width: 50%;
+}
+
+.home-header {
+  margin: 40px 0 20px 0;
+  min-height: 200px;
+  width: 1064px;
 }
 
 .home-title {
-    font-size: 200%;
+    font-size: 230%;
     margin-bottom: 5px;;
 }
 
@@ -11,11 +17,16 @@ h2 {
     color: black;
 }
 
+.card-row {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+}
 
 
 .subject-card {
-    width: 400px;
-    height: 140px;
+    width: 500px;
+    height: 170px;
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
@@ -23,8 +34,8 @@ h2 {
 }
 
 .subject-text-container {
-    width: 250px;
-    margin-left: 20px;
+    width: 300px;
+    margin-left: 25px;
     margin-top: 20px;
     display: flex;
     flex-direction: column;
@@ -33,8 +44,8 @@ h2 {
 
 
 .square-image-container {
-    width: 140px;
-    height: 140px;
+    width: 160px;
+    height: 160px;
 }
 
 
@@ -51,6 +62,6 @@ button {
 
 .read-more {
     margin-top: 15px;
-    font-size: 100%; 
+    font-size: 140%;
     color: gray;
 }
