--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,18 +1,23 @@
-<div class="beau extra-margin">
+<div class="macy">
+  <div class="macy">
+  <div class="home-header">
 
-    <div class="main-text">
+    <div>
         <h2>Welkom op de website van Bob Hoogenboom!</h2>
         <p class="text-beginning-of-page">
          Kijk gerust even rond voor inspiratie. Meer onderwerpen zoals gezondheid, Formule 1 en het klimaatprobleem
          volgen binnenkort.
         </p>
     </div>
+  </div>
+  </div>
+
 
 
 <div class="macy">
+  <div class="card-row">
 
     <button (click)="onMotorClick()">
-        <div>
             <mat-card class="subject-card mat-elevation-z8">
                 <div class="square-image-container">
                     <img style="object-fit: cover; width: 100%;" src="assets/motor3.jpg">
@@ -25,11 +30,9 @@
                     </p>
                 </div>
             </mat-card>
-        </div>
     </button>
 
         <button (click)="onGravitationClick()">
-            <div>
                 <mat-card class="subject-card mat-elevation-z8">
                     <div class="square-image-container">
                         <img style="object-fit: cover; height: 100%;" src="assets/coverHeelal2.png">
@@ -42,11 +45,10 @@
                             </p>
                         </div>
                 </mat-card>
-            </div>
         </button>
-
+  </div>
+  <div class="card-row">
     <button (click)="onPaintingsClick()">
-        <div>
             <mat-card class="subject-card mat-elevation-z8">
                 <div class="square-image-container">
                     <img style="object-fit: cover; width: 100%;" src="assets/brws-B1.jpg">
@@ -59,8 +61,22 @@
                         </p>
                 </div>
             </mat-card>
-        </div>
     </button>
+    <button (click)="onHealthClick()">
+        <mat-card class="subject-card mat-elevation-z8">
+          <div class="square-image-container">
+            <img style="object-fit: cover; width: 100%;" src="assets/brws-B1.jpg">
+          </div>
+          <div class="subject-text-container">
+            <div class="home-title">Gezondheid en</div>
+            <div class="home-title">antioxidanten</div>
+            <p class="read-more">
+              LEES MEER <mat-icon style="color: gray; font-size: 80%;">arrow_forward_ios</mat-icon>
+            </p>
+          </div>
+        </mat-card>
+    </button>
+  </div>
 </div>
 </div>
 
