--- a/src/styles.css
+++ b/src/styles.css
@@ -27,10 +27,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  margin-top: 60px;
-  margin-left: 50px;
-  margin-right: 50px;
-  margin-bottom: 80px;
+  margin: 60px 50px 80px;
 }
 
 .macy {
@@ -44,9 +41,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   font-size: 250%;
   font-weight: bold;
-  margin-bottom: 10px;
-  margin-left: 10px;
-  margin-right: 10px;
+  margin: 0 10px 10px;
 }
 
 
@@ -60,4 +55,5 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .text-beginning-of-page {
   line-height: 25px;
   text-align: justify;
+  font-size: 120%;
 }
