--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,7 +5,7 @@
     <div>
         <h2>Welkom op de website van Bob Hoogenboom!</h2>
         <p class="text-beginning-of-page">
-         Kijk gerust even rond voor inspiratie. Meer onderwerpen zoals gezondheid, Formule 1 en het klimaatprobleem
+         Kijk gerust even rond voor inspiratie. Meer onderwerpen zoals Formule 1 en het klimaatprobleem
          volgen binnenkort.
         </p>
     </div>
@@ -65,7 +65,7 @@
     <button (click)="onHealthClick()">
         <mat-card class="subject-card mat-elevation-z8">
           <div class="square-image-container">
-            <img style="object-fit: cover; width: 100%;" src="assets/brws-B1.jpg">
+            <img style="object-fit: cover; height: 100%;" src="assets/hb-antioxidant-nr1.png">
           </div>
           <div class="subject-text-container">
             <div class="home-title">Gezondheid en</div>
