--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,19 +1,36 @@
-mat-toolbar {
-    height: 70px;
+.main-toolbar {
+    height: 55px;
     background-color: rgb(9, 25, 59);
     color: white;
 }
 
+mat-toolbar {
+  height: 35px;
+}
+
 .buttons-div {
-    margin: 30px;
+  width: 65%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 .toolbar-button {
     background-color: transparent;
     color: white;
-    font-size: 80%;
+    font-size: 85%;
     margin-right: 16px;
     margin-left: 8px;
+}
+
+.contact-button {
+  justify-self: flex-end;
+  align-self: end;
+}
+
+.signature-image-container {
+  width: 400px;
+  height: 100px;
 }
 
 
