--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,8 +5,8 @@
         <mat-icon>home</mat-icon>
     </button>
   </span>
-  <div class="signature-image-container">
-    <img style="object-fit: contain; height: 100%" src="assets/signature-bob.png">
+  <div (click)="onHomeClick()" class="signature-image-container">
+    <img style="object-fit: contain; height: 100%; cursor: pointer" src="assets/signature-bob.png">
   </div>
   <div class="buttons-div">
     <div >
