--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -31,6 +31,7 @@ h2 {
     flex-direction: row;
     justify-content: flex-start;
     align-items: flex-start;
+    cursor: pointer;
 }
 
 .subject-text-container {
@@ -49,11 +50,11 @@ h2 {
 }
 
 
-button {
-    border-color: white;
-    background-color: white;
-    border-width: 0;
-    margin: 10px;
+.invisible-button {
+  border-color: white;
+  background-color: white;
+  margin: 10px;
+  border-width: 0;
 }
 
 .extra-margin {
