--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -17,7 +17,7 @@
 <div class="macy">
   <div class="card-row">
 
-    <button (click)="onMotorClick()">
+    <button class="invisible-button" (click)="onMotorClick()">
             <mat-card class="subject-card mat-elevation-z8">
                 <div class="square-image-container">
                     <img style="object-fit: cover; width: 100%;" src="assets/motor3.jpg">
@@ -32,7 +32,7 @@
             </mat-card>
     </button>
 
-        <button (click)="onGravitationClick()">
+        <button class="invisible-button" (click)="onGravitationClick()">
                 <mat-card class="subject-card mat-elevation-z8">
                     <div class="square-image-container">
                         <img style="object-fit: cover; height: 100%;" src="assets/coverHeelal2.png">
@@ -48,7 +48,7 @@
         </button>
   </div>
   <div class="card-row">
-    <button (click)="onPaintingsClick()">
+    <button class="invisible-button" (click)="onPaintingsClick()">
             <mat-card class="subject-card mat-elevation-z8">
                 <div class="square-image-container">
                     <img style="object-fit: cover; width: 100%;" src="assets/brws-B1.jpg">
@@ -62,7 +62,7 @@
                 </div>
             </mat-card>
     </button>
-    <button (click)="onHealthClick()">
+    <button class="invisible-button" (click)="onHealthClick()">
         <mat-card class="subject-card mat-elevation-z8">
           <div class="square-image-container">
             <img style="object-fit: cover; height: 100%;" src="assets/hb-antioxidant-nr1.png">
