--- a/src/app/contact/contact.component.css
+++ b/src/app/contact/contact.component.css
@@ -4,9 +4,13 @@
 
 .about-text {
     width: 30%;
-    line-height: 25px;
+    line-height: 30px;
 }
 
 .image-bob {
     width: 30%;;
+}
+
+p {
+  font-size: 120%;
 }
