added copyright, adjusted size of amazon gravitation theory frame

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -33,5 +33,12 @@ mat-toolbar {
   height: 100px;
 }
 
+.copyright-note {
+  margin-top: 25px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 
 
