--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<div style="min-height: 800px">
 <mat-toolbar></mat-toolbar>
 <mat-toolbar class="main-toolbar">
   <span>
@@ -19,6 +20,9 @@
       <button mat-button class="toolbar-button"  (click)="onMotorClick()">
           Motor
       </button>
+      <button mat-button class="toolbar-button">
+        Gezondheid
+      </button>
     </div>
       <button mat-button class="toolbar-button contact-button"  (click)="onContactClick()">
           Contact
@@ -29,6 +33,15 @@
 
 
 <router-outlet></router-outlet>
+</div>
+
+
+<div class="copyright-note">
+  <mat-divider style="width: 100%"></mat-divider>
+  <div>
+    <p style="font-size: 80%">&copy; 2019 Bob Hoogenboom</p>
+  </div>
+</div>
 
 
 
